--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link href="/dist/styles.css" rel="stylesheet"> -->
     <!-- <link href="/index.css" rel="stylesheet"> -->
-    <title>Todo Dashboard</title>
+    <title>Task Management</title>
   </head>
   <body>
     <div id="root"></div>
